--- a/scss/layout/main.scss
+++ b/scss/layout/main.scss
@@ -81,14 +81,26 @@
   }
   .parent{
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
-    img {
+    // flex-direction: column;
+    // justify-content: center;
+    // margin-left:auto;
+    // margin-right: auto;
+    .left {
       display: flex;
-      flex-wrap: wrap;
+      // flex-wrap: wrap;
       flex-direction: column;
-      justify-content: center;
+      // justify-content: center;
+      align-items: center;
+      margin-left:auto;
+      margin-right: auto;
+      img{
+        width: 100%;
+      }
     }
   }
+
   .right {
     display: none;
   }
